add search function

--- a/category.html
+++ b/category.html
@@ -143,9 +143,9 @@
             />
             <div class="d-flex align-items-center">Search By</div>
             <select id="search_dropdown" class="bg-white border-0 text-center">
-              <option value="" disabled selected></option>
-              <option value="">Title</option>
-              <option value="">Tag</option>
+              <option value="" disabled></option>
+              <option value="title" selected>Title</option>
+              <option value="tag">Tag</option>
             </select>
           </div>
         </div>
