update shop page design

--- a/cart.html
+++ b/cart.html
@@ -200,25 +200,25 @@
 
                 <div class="d-flex flex-column justify-content-between pt-4">
                   <a
-                    href="category.html?categody=Electronics"
+                    href="category.html?category=Electronics"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Electronics</a
                   >
                   <a
-                    href="category.html?categody=food"
+                    href="category.html?category=food"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Food</a
                   >
                   <a
-                    href="category.html?categody=clothes"
+                    href="category.html?category=clothes"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Clothes</a
                   >
                   <a
-                    href="category.html?categody=furniture"
+                    href="category.html?category=furniture"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Furnitures</a
