change icon thickness

--- a/cart.html
+++ b/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>TechPro | Product Section</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -9,9 +9,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=yes"
     />
     <!-- Bootstrap CSS -->
+    <link rel="icon" sizes="32x32" type="image/x-icon" href="img/logo/full_2.png">
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/cart.css" />
 
@@ -35,7 +36,7 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="img/logo/full_1.png"
+              src="img/logo/full_3.png"
               width="50"
               height="50"
               class="rounded"
@@ -110,7 +111,7 @@
                 class="cart_main_desc_header_holder d-flex flex-column align-items-center justify-content-around h-60"
               >
                 <div class="cart_main_desc_title h3 pt-4" style="font-size: 5vw;border-bottom: 2px solid #007bff;text-transform: capitalize;">Cotton T-shirt</div>
-                <div class="cart_main_desc_desc text-center small-16 text-fade">
+                <div class="cart_main_desc_desc text-center small-16 text-muted">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Magni voluptatem soluta architecto reprehenderit possimus
                   beatae eos, expedita alias molestias, odio quidem.
