--- a/category.html
+++ b/category.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Categories</title>
+    <title>TechPro | Categories Section</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -10,9 +10,15 @@
     />
 
     <!-- Bootstrap CSS -->
+    <link
+      rel="icon"
+      sizes="32x32"
+      type="image/x-icon"
+      href="img/logo/full_2.png"
+    />
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/clock.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/cat.css" />
@@ -37,7 +43,7 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="img/logo/full_1.png"
+              src="img/logo/full_3.png"
               width="50"
               height="50"
               class="rounded"
