--- a/shop.html
+++ b/shop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TechPro | Shopping Sction</title>
+    <title>TechPro | Shopping Section</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -11,7 +11,7 @@
     <link rel="icon" sizes="32x32" type="image/x-icon" href="img/logo/full_2.png">
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/shop.css" />
 
@@ -35,7 +35,7 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="img/logo/full_1.png"
+              src="img/logo/full_3.png"
               width="50"
               height="50"
               class="rounded"
@@ -317,7 +317,7 @@
                   <div class="h6">
                     SUDAN KHARTOUM,CENTERAL MARKET
                   </div>
-                  <div class="h6"><a href="tel:0912734315" class="text-dark">+249912734315</a></div>
+                  <div class="h5"><a href="tel:0912734315" class="text-dark">+249912734315</a></div>
                   <div class="h6">
                     <a href="mailto:<nowiki>mohamedx.28@gmail.com?subject="TECHNIC PROFESSIONAL emails:" class="text-dark">mohamedx.28@gmail.com</a>
                   </div>
