--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>TechPro | Shopping Cart Section</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <link
+      rel="icon"
+      sizes="32x32"
+      type="image/x-icon"
+      href="img/logo/full_2.png"
+    />
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/shopping_cart.css" />
   </head>
@@ -28,7 +33,7 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="img/logo/full_1.png"
+              src="img/logo/full_3.png"
               width="50"
               height="50"
               class="rounded"
