--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle text-center"
+                    class="line_desc justify-content-center font-8 ml-2 d-flex align-self-middle text-center"
                   >
                     <p class="text-dark text-center h5">
                       opened
@@ -350,7 +350,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
+                    class="line_desc justify-content-center font-8 ml-2 d-flex align-self-middle text-center"
                   >
                     <p class="text-dark text-center h5">
                       opened
@@ -370,7 +370,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
+                    class="line_desc justify-content-center font-8 ml-2 d-flex align-self-middle text-center"
                   >
                     <p class="text-dark text-center h5">
                       Off day
@@ -390,7 +390,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
+                    class="line_desc justify-content-center font-8 ml-2 d-flex align-self-middle text-center"
                   >
                     <p class="text-dark text-center h5">
                       opened
@@ -410,7 +410,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
+                    class="line_desc justify-content-center font-8 ml-2 d-flex align-self-middle text-center"
                   >
                     <p class="text-dark text-center h5">
                       opened
@@ -432,7 +432,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
+                    class="line_desc justify-content-center font-8 ml-2 d-flex align-self-middle text-center"
                   >
                     <p class="text-dark text-center h5">
                       still opened
@@ -454,7 +454,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
+                    class="line_desc justify-content-center font-8 ml-2 d-flex align-self-middle text-center"
                   >
                     <p class="text-dark text-center h5">
                       Closed
