arabic pages semi-done

--- a/lang/ar/shop.html
+++ b/lang/ar/shop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <title>TechPro | Shopping Section</title>
     <!-- Required meta tags -->
@@ -8,21 +8,22 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=yes"
     />
-    <link rel="icon" sizes="32x32" type="image/x-icon" href="img/logo/full_2.png">
-    <link rel="stylesheet" href="lib/bootstrap.min.css" />
-    <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/shop.css" />
+    <link rel="icon" sizes="32x32" type="image/x-icon" href="../../img/logo/full_2.png">
+    <link rel="stylesheet" href="../../lib/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../lib/fontawesome-free/css/all.css" />
+    <!-- <link rel="stylesheet" href="../../css/loader.css" /> -->
+    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/shop.css" />
+    <link rel="stylesheet" href="../../css/lang.css" />
 
     <link
       rel="stylesheet"
       type="text/css"
-      href="media/slick-1.8.1/slick/slick.css"
+      href="../../media/slick-1.8.1/slick/slick.css"
     />
-    <link rel="stylesheet" href="media/slick-1.8.1/slick/slick-theme.css" />
+    <link rel="stylesheet" href="../../media/slick-1.8.1/slick/slick-theme.css" />
   </head>
-  <body>
+  <body dir="rtl">
     <!-- pre-loader -->
     <div id="loader" class="loader">
       <div class="logo_loader"></div>
@@ -35,7 +36,7 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="img/logo/full_3.png"
+              src="../../../../img/logo/full_3.png"
               width="50"
               height="50"
               class="rounded"
@@ -75,33 +76,33 @@
         <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
           <a href="category.html?category=Electronics"> <div class="cat_img1">
             <div class="cat_header">
-              <div class="h3 text-white rounded p-1 bg-primary">Electronics</div>
+              <div class="h3 text-white rounded p-1 bg-primary text-center">ادوات كهربائية</div>
             </div>
-            <img src="img/icons/electronics.png" alt="" />
+            <img src="../../img/icons/electronics.png" alt="" />
           </div> </a>
           
         </div>
         <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
           <a href="category.html?category=clothes">
-            <div class="cat_header"><div class="h3 text-white bg-primary p-1">Clothes</div></div>
+            <div class="cat_header"><div class="h3 text-white bg-primary p-1 text-center">ملابس</div></div>
           <div class="cat_img2">
-            <img src="img/icons/clothes.png" alt="" />
+            <img src="../../img/icons/clothes.png" alt="" />
           </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
           <a href="category.html?category=food">
-            <div class="cat_header"><div class="h3 text-white bg-primary p-1">Food</div></div>
+            <div class="cat_header"><div class="h3 text-white bg-primary p-1 text-center">اطعمة معلبة</div></div>
           <div class="cat_img3">
-            <img src="img/icons/shelf.png" alt="food" />
+            <img src="../../img/icons/shelf.png" alt="food" />
           </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
           <a href="category.html?category=furniture">
-            <div class="cat_header"><div class="h3 text-white bg-primary p-1">Furnitures</div></div>
+            <div class="cat_header"><div class="h3 text-white bg-primary p-1 text-center">أثاثات منزلية</div></div>
           <div class="cat_img4">
-            <img src="img/icons/furniture.png" alt="" />
+            <img src="../../img/icons/furniture.png" alt="" />
           </div>
           </a>
         </div>
@@ -109,11 +110,11 @@
       <br />
       <div class="container cat_sub_header mt-4 pt-4">
         <h1 class="bg-black text-center" style="text-transform: uppercase;">
-          Our humble list
+          قائمتنا المتواضعة
         </h1>
         <center>
           <small class="text-muted"
-            >All necessary household items are here .... choose now</small
+            >كل متطلبات المنزل موجودة هنا ..... اختر الآن</small
           >
         </center>
       </div>
@@ -125,11 +126,11 @@
     <section class="most_sell">
       <div class="most_sell_header text-center">
         <h1 class="text-center">
-          Most Popular Products
+          المنتجات الأكثر تقيما
           <i class="fa fa-star text-warning" aria-hidden="true"></i>
         </h1>
         <small class="text-muted"
-          >A small group of our high rated products .</small
+          >قائمتنا الصغيرة ذات التقييم العالي</small
         >
       </div>
       <div class="most_sell_container container h-75">
@@ -140,7 +141,7 @@
             <div class="most_sell_wrapper row h-100 position-relative">
               <div class="col-6">
                 <div class="position-relative most_sell_holder1 w-100 h-100">
-                  <a href="cart.html?category=Electronics&code=3"><img src="img/products/Electronics/smart_screen2.jpg" /></a>
+                  <a href="cart.html?category=Electronics&code=3"><img src="../../img/products/Electronics/smart_screen2.jpg" /></a>
                   <div class="most_sell_img_btn item1">
                     <button class="bg-white shadow-sm">
                       <i class="fa fa-search" aria-hidden="true"></i>
@@ -170,7 +171,7 @@
               </div>
               <div class="col-6">
                 <div class="position-relative most_sell_holder2 w-100 h-100">
-                 <a href="cart.html?category=food&code=4"><img src="img/products/Food/nutella.jpg" /></a> 
+                 <a href="cart.html?category=food&code=4"><img src="../../img/products/Food/nutella.jpg" /></a> 
                   <div class="most_sell_img_btn item2">
                     <button class="bg-white shadow-sm">
                       <i class="fa fa-search" aria-hidden="true"></i>
@@ -200,7 +201,7 @@
               <div class="w-100 d-none"></div>
               <div class="col-6">
                 <div class="position-relative most_sell_holder3 w-100 h-100">
-                  <a href="cart.html?category=clothes&code=11"><img src="img/products/clothes/shoe3.jpg" /></a>
+                  <a href="cart.html?category=clothes&code=11"><img src="../../img/products/clothes/shoe3.jpg" /></a>
                   <div class="most_sell_img_btn item3">
                     <button class="bg-white shadow-sm">
                       <i class="fa fa-search" aria-hidden="true"></i>
@@ -230,7 +231,7 @@
               <div class="col-6">
                 <div class="position-relative most_sell_holder4 w-100 h-100">
                   <a href="cart.html?category=furniture&code=1"><img
-                    src="img/products/Furnitures/90d6d8b35dbe78484d7078e93255ba10.jpg"
+                    src="../../img/products/Furnitures/90d6d8b35dbe78484d7078e93255ba10.jpg"
                   /></a>
                   <div class="most_sell_img_btn item4">
                     <button class="bg-white shadow-sm">
@@ -264,7 +265,7 @@
             class="col-lg-6 col-md-12 col-sm-12 order-first order-sm-first order-md-first order-lg-last h-100"
           >
             <img
-              src="img/products/welcome_1.jpg"
+              src="../../img/products/welcome_2.jpg"
               style="
                 background-size: contain;
                 width: 100%;
@@ -284,14 +285,14 @@
         <div
           class="middle_screen_header container d-flex flex-column justiify-content-between"
         >
-          <p><small>#Fashion Wall</small></p>
-          <div style="font-size:10vw">New Design 2020</div>
+          <p><small>#جدار الموضة</small></p>
+          <div style="font-size:10vw">تصاميم جديدة 2020</div>
           <a href="category.html?category=clothes" class="middle_screen_btn text-center mt-4 text-white">
-            Shop Now
+            تسوق الآن
           </a>
         </div>
         <div class="middle_screen_holder">
-          <img src="img/products/Walking-green-wall.jpg" alt="" />
+          <img src="../../img/products/Walking-green-wall.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -306,7 +307,7 @@
               <div class="col-lg-6 col-md-5 col-sm-12 d-flex flex-column">
                 <div class="h1">
                   <img
-                    src="img/logo/full_1.png"
+                    src="../../img/logo/full_1.png"
                     width="50"
                     height="50"
                     class="rounded"
@@ -422,17 +423,17 @@
 
     <!-- js part -->
 
-    <script src="lib/jquery-3.5.1.min.js"></script>
+    <script src="../../lib/jquery-3.5.1.min.js"></script>
    
-    <script src="lib/bootstrap-4.3.1.min.js"></script>
+    <script src="../../lib/bootstrap-4.3.1.min.js"></script>
 
     <!-- changing walk cover image -->
     <script>
       $(document).ready(function(){
         $(".middle_screen_btn").hover(function(){
-          $(".middle_screen_holder > img").attr('src','img/products/Walking-purple-wall.jpg');
+          $(".middle_screen_holder > img").attr('src','../../img/products/Walking-purple-wall.jpg');
         },function(){
-          $(".middle_screen_holder > img").attr('src','img/products/Walking-green-wall.jpg');
+          $(".middle_screen_holder > img").attr('src','../../img/products/Walking-green-wall.jpg');
         })
 
         
@@ -442,7 +443,7 @@
     <!-- slick carousel library -->
     <script
       type="text/javascript"
-      src="media/slick-1.8.1/slick/slick.min.js"
+      src="../../media/slick-1.8.1/slick/slick.min.js"
     ></script>
     <script>
       $(document).ready(function () {
