--- a/category.html
+++ b/category.html
@@ -66,7 +66,9 @@
           <span class="fas fa-bars"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto pl-4 col-md-6">
+          <ul
+            class="navbar-nav ml-auto pl-4 col-md-7 d-flex justify-content-between"
+          >
             <li class="nav-item"><a href="#" class="nav-link">SERVICES</a></li>
             <li class="nav-item"><a href="#" class="nav-link">MAP</a></li>
             <li class="nav-item"><a href="#" class="nav-link">CONTAINER</a></li>
