--- a/lang/ar/cart.html
+++ b/lang/ar/cart.html
@@ -9,19 +9,19 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=yes"
     />
     <!-- Bootstrap CSS -->
-    <link rel="icon" sizes="32x32" type="image/x-icon" href="img/logo/full_2.png">
-    <link rel="stylesheet" href="lib/bootstrap.min.css" />
-    <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/cart.css" />
+    <link rel="icon" sizes="32x32" type="image/x-icon" href="../../img/logo/full_2.png">
+    <link rel="stylesheet" href="../../lib/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../lib/fontawesome-free/css/all.css" />
+    <link rel="stylesheet" href="../../css/loader.css" />
+    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/cart.css" />
 
     <link
       rel="stylesheet"
       type="text/css"
-      href="media/slick-1.8.1/slick/slick.css"
+      href="../../media/slick-1.8.1/slick/slick.css"
     />
-    <link rel="stylesheet" href="media/slick-1.8.1/slick/slick-theme.css" />
+    <link rel="stylesheet" href="../../media/slick-1.8.1/slick/slick-theme.css" />
   </head>
   <body>
     <!-- pre-loader -->
@@ -36,7 +36,7 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="img/logo/full_3.png"
+              src="../../img/logo/full_3.png"
               width="50"
               height="50"
               class="rounded"
@@ -73,7 +73,7 @@
               class="d-flex align-items-center justify-content-around text-muted w-30"
             >
               <a href="#" class="text-dark text-fade">Category</a>
-              <img src="img/icons/next (1).png" width="16" height="16" />
+              <img src="../../img/icons/next (1).png" width="16" height="16" />
               <a href="#" class="prev_page text-dark text-fade">Furniture</a>
             </div>
             <div
@@ -82,7 +82,7 @@
               <small class="text-muted">Share</small>
               <div>
                 <img
-                  src="img/products/icons/facebook.png"
+                  src="../../img/products/icons/facebook.png"
                   alt="facebook"
                   width="16"
                   height="16"
@@ -92,7 +92,7 @@
               </div>
               <div class="">
                 <img
-                  src="img/products/icons/twitter.png"
+                  src="../../img/products/icons/twitter.png"
                   alt="twitter"
                   width="16"
                   height="16"
@@ -179,7 +179,7 @@
                 <div class="h1">
                   <b>
                     <img
-                      src="img/logo/full_1.png"
+                      src="../../img/logo/full_1.png"
                       width="50"
                       height="50"
                       class="rounded"
@@ -294,9 +294,9 @@
     <!-- END FOOTER -->
 
     <!-- Optional JavaScript -->
-    <script src="lib/jquery-3.5.1.min.js"></script>
-    <script src="lib/bootstrap-4.3.1.min.js"></script>
-    <script src="lib/smtp.js"></script>
+    <script src="../../lib/jquery-3.5.1.min.js"></script>
+    <script src="../../lib/bootstrap-4.3.1.min.js"></script>
+    <script src="../../lib/smtp.js"></script>
 
     <script src="js/like.js"></script>
 
