--- a/lang/ar/category.html
+++ b/lang/ar/category.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TechPro | Product Section</title>
+    <title>TechPro | Categories Section</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=yes"
     />
+
     <!-- Bootstrap CSS -->
-    <link rel="icon" sizes="32x32" type="image/x-icon" href="img/logo/full_2.png">
-    <link rel="stylesheet" href="lib/bootstrap.min.css" />
-    <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/cart.css" />
+    <link
+      rel="icon"
+      sizes="32x32"
+      type="image/x-icon"
+      href="../../img/logo/full_2.png"
+    />
+    <link rel="stylesheet" href="../../lib/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../lib/fontawesome-free/css/all.css" />
+    <link rel="stylesheet" href="../../css/loader.css" />
+    <link rel="stylesheet" href="../../css/clock.css" />
+    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/cat.css" />
 
     <link
       rel="stylesheet"
       type="text/css"
-      href="media/slick-1.8.1/slick/slick.css"
+      href="../../media/slick-1.8.1/slick/slick.css"
     />
-    <link rel="stylesheet" href="media/slick-1.8.1/slick/slick-theme.css" />
+    <link
+      rel="stylesheet"
+      href="../../media/slick-1.8.1/slick/slick-theme.css"
+    />
   </head>
   <body>
     <!-- pre-loader -->
@@ -36,13 +46,23 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="img/logo/full_3.png"
+              src="../../img/logo/full_3.png"
               width="50"
               height="50"
               class="rounded"
               alt=""
             />
           </h1>
+        </a>
+        <a href="../../shopping_cart.html" class="pl-lg-5 position-relative"
+          ><img
+            src="../../img/icons/32 px/2.png"
+            class="position-relative"
+            alt=""
+          />
+          <div class="position-absolute" style="top: -39%; left: 90%;">
+            <span class="cart_number badge badge-primary"></span>
+          </div>
         </a>
         <button
           class="navbar-toggler border-0"
@@ -53,7 +73,9 @@
           <span class="fas fa-bars"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto pl-4 col-md-7 d-flex justify-content-between">
+          <ul
+            class="navbar-nav ml-auto pl-4 col-md-7 d-flex justify-content-between"
+          >
             <li class="nav-item"><a href="#" class="nav-link">SERVICES</a></li>
             <li class="nav-item"><a href="#" class="nav-link">MAP</a></li>
             <li class="nav-item"><a href="#" class="nav-link">CONTAINER</a></li>
@@ -64,17 +86,21 @@
     </nav>
     <!-- end top nav -->
 
-    <!-- MAIN -->
-    <div class="main pt-5 pb-4">
-      <div class="holder container">
-        <div class="wrapper d-flex flex-column justify-content-center">
-          <div class="cart_top_nav d-flex flex-row justify-content-between p-4">
+    <!-- page holder -->
+    <div class="main pt-5">
+      <div class="container">
+        <div class="cat_nav">
+          <div class="upper_nav d-flex flex-row justify-content-between p-4">
             <div
               class="d-flex align-items-center justify-content-around text-muted w-30"
             >
-              <a href="#" class="text-dark text-fade">Category</a>
-              <img src="img/icons/next (1).png" width="16" height="16" />
-              <a href="#" class="prev_page text-dark text-fade">Furniture</a>
+              <i class="fa fa-clock fa-2x text-primary" aria-hidden="true"></i>
+              <div id="clockdate">
+                <div class="clockdate-wrapper">
+                  <div id="clock"></div>
+                  <div id="date"></div>
+                </div>
+              </div>
             </div>
             <div
               class="cat_social_media d-flex flex-row justify-content-between align-items-center w-10"
@@ -82,7 +108,7 @@
               <small class="text-muted">Share</small>
               <div>
                 <img
-                  src="img/products/icons/facebook.png"
+                  src="../../img/products/icons/facebook.png"
                   alt="facebook"
                   width="16"
                   height="16"
@@ -92,82 +118,72 @@
               </div>
               <div class="">
                 <img
-                  src="img/products/icons/twitter.png"
+                  src="../../img/products/icons/twitter.png"
                   alt="twitter"
                   width="16"
                   height="16"
-                  style="object-fit: contain;"
                 />
                 <small class="text-muted bg-white">45</small>
               </div>
             </div>
           </div>
-          <div class="cart_main_proccess d-flex flex-lg-row flex-column">
-            <div class="cart_mian_img_holder col-12 col-lg-6 position-relative">
-              <img src="" style="width: 100%; height: 100%;" alt="" />
+          <div class="cat_title">
+            <div
+              id="cat_title_text"
+              class="h3 p-5 text-dark text-muted d-flex flex-column justify-content-center align-items-center"
+            >
+              Clothsing & Fashion
+              <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>
             </div>
-            <div class="cart_main_img_desc col-12 col-lg-6">
+          </div>
+        </div>
+
+        <div
+          class="w-75 position-relative d-flex flex-row bg-white justify-content-around text-muted align-items-center"
+          style="height: 7vh; transform: translateX(15%);"
+        >
+          <div
+            class="input-group shadow-sm rounded p-2 border-primary border-right border-left"
+          >
+            <div class="input-group-prepend">
               <div
-                class="cart_main_desc_header_holder d-flex flex-column align-items-center justify-content-around h-60"
+                class="input-group-text bg-white border-0"
+                id="btnGroupAddon"
               >
-                <div class="cart_main_desc_title h3 pt-4" style="font-size: 5vw;border-bottom: 2px solid #007bff;text-transform: capitalize;">Cotton T-shirt</div>
-                <div class="cart_main_desc_desc text-center small-16 text-muted">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Magni voluptatem soluta architecto reprehenderit possimus
-                  beatae eos, expedita alias molestias, odio quidem.
-                  Exercitationem?
-                </div>
-                <div class="cart_main_desc_price h3" style="font-size: 8vw;color: #6ce2ac ;font-weight: 400;" value="25.00"></div>
-              </div>
-              <div
-                class="cart_main_desc_call_to_action d-flex flex-lg-row flex-column justify-content-between align-items-center h-25"
-              >
-                <div
-                  class="col-12 col-sm-12 col-md-12 col-lg-4 cart_main_desc_quantity p-2 border-fade"
-                >
-                  <input
-                    type="number"
-                    name="number"
-                    class="text-center"
-                    value="1"
-                    min="1"
-                    id="quantity"
-                    style="
-                      width: 100%;
-                      /* height: 3.5rem; */
-                      border: 0;
-                      background-color: transparent;
-                      outline: transparent;
-                    "
-                  />
-                </div>
-                <a href="#"
-                  class="col-12 col-sm-12 col-md-12 col-lg-5 cart_main_desc_buy_btn p-2 m-3 bg-primary text-white"
-                >
-                  <div
-                    class="d-flex flex-row justify-content-around align-items-center"
-                    style="width: 100%; cursor: pointer;"
-                  >
-                    <i class="fa fa-shopping-cart"></i>
-                    <p class="h5 p-0 m-0">buy</p>
-                  </div>
-                </a>
-                <div
-                  class="col-12 col-sm-12 col-md-12 col-lg-3 cart_main_desc_fav_btn text-center border-fade"
-                >
-                  <i
-                    class="like_btn fa fa-heart text-muted" value="unlike"
-                    style="padding: 0.72rem; width: 100%; cursor: pointer;"
-                    aria-hidden="true"
-                  ></i>
-                </div>
+                <i class="fa fa-search text-muted" aria-hidden="true"></i>
               </div>
             </div>
+            <input
+              type="text"
+              id="search"
+              class="form-control border-0"
+              placeholder="Search"
+              aria-label="Input group example"
+              aria-describedby="btnGroupAddon"
+            />
+            <div class="d-flex align-items-center">Search By</div>
+            <select id="search_dropdown" class="bg-white border-0 text-center">
+              <option value="" disabled></option>
+              <option value="title" selected>Title</option>
+              <option value="tag">Tag</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="cat_product_holder w-100 pb-3 rounded">
+          <div class="row" id="category_contents"></div>
+          <div class="text-center p-5">
+            <i
+              class="fa fa-arrow-up fa-2x p-2 bg-white text-muted rounded-circle shadow-lg load_more"
+              aria-hidden="true"
+            ></i>
           </div>
         </div>
       </div>
     </div>
-    <!-- END MAIN -->
+    <!-- end page holder -->
+
+    <!-- ////////////////////// -->
 
     <!-- CONTACT SUB -->
     <div class="contact_sub pt-4 bg-light">
@@ -177,22 +193,29 @@
             <div class="row">
               <div class="col-lg-6 col-md-5 col-sm-12 d-flex flex-column">
                 <div class="h1">
-                  <b>
-                    <img
-                      src="img/logo/full_1.png"
-                      width="50"
-                      height="50"
-                      class="rounded"
-                      alt=""
-                  /></b>
+                  <img
+                    src="../../../../img/logo/full_1.png"
+                    width="50"
+                    height="50"
+                    class="rounded"
+                    alt=""
+                  />
                 </div>
                 <div class="d-flex flex-column justify-content-between pt-4">
                   <div class="h6">
                     SUDAN KHARTOUM,CENTERAL MARKET
                   </div>
-                  <div class="h6"><a href="tel:0912734315" class="text-dark">+249912734315</a></div>
                   <div class="h6">
-                    <a href="mailto:<nowiki>mohamedx.28@gmail.com?subject="TECHNIC PROFESSIONAL emails:" class="text-dark">mohamedx.28@gmail.com</a>
+                    <a href="tel:+249912734315" class="text-dark"
+                      >+249912734315</a
+                    >
+                  </div>
+                  <div class="h6">
+                    <a
+                      href="mailto:mohamedx.28@gmail.com?subject=TECHNIC PROFESSIONAL Visitors :"
+                      class="text-dark"
+                      >mohamedx.28@gmail.com</a
+                    >
                   </div>
                 </div>
               </div>
@@ -294,16 +317,44 @@
     <!-- END FOOTER -->
 
     <!-- Optional JavaScript -->
-    <script src="lib/jquery-3.5.1.min.js"></script>
-    <script src="lib/bootstrap-4.3.1.min.js"></script>
-    <script src="lib/smtp.js"></script>
 
-    <script src="js/like.js"></script>
+    <script src="../../lib/jquery-3.5.1.min.js"></script>
+    <script src="../../lib/bootstrap-4.3.1.min.js"></script>
+
+    <!-- Digital clock With 12 Format -->
+    <script src="js/clock.js"></script>
+
+    <!-- Changing Title -->
+    <script>
+      var currentlocation = window.location.href;
+      var url = new URL(currentlocation);
+      var url_params = url.searchParams.get('category');
+
+      var title = document.getElementById('cat_title_text');
+      switch (url_params) {
+        case 'food':
+          title.innerHTML =
+            'Candded Tasts <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
+          break;
+        case 'Electronics':
+          title.innerHTML =
+            'HouseHold & Electronics Tools <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
+          break;
+        case 'furniture':
+          title.innerHTML =
+            'Interior Furnitures <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
+          break;
+      }
+    </script>
+
+    <!-- data -->
+
+    <script src="js/cat_data.js"></script>
+    <script src="js/cat_likes.js"></script>
+    <script src="js/cat_search.js"></script>
 
     <!-- scroll effect with navbar -->
     <script src="js/nav_scrooler.js"></script>
-    <script src="js/cart_effects.js"></script>
-    <script src="js/cart_data.js"></script>
     <script src="js/loader.js"></script>
   </body>
 </html>
