--- a/lang/ar/shopping_cart.html
+++ b/lang/ar/shopping_cart.html
@@ -12,13 +12,13 @@
       rel="icon"
       sizes="32x32"
       type="image/x-icon"
-      href="img/logo/full_2.png"
+      href="../../img/logo/full_2.png"
     />
-    <link rel="stylesheet" href="lib/bootstrap.min.css" />
-    <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/shopping_cart.css" />
+    <link rel="stylesheet" href="../../lib/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../lib/fontawesome-free/css/all.css" />
+    <link rel="stylesheet" href="../../css/loader.css" />
+    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/shopping_cart.css" />
   </head>
   <body>
     <!-- pre-loader -->
@@ -33,7 +33,7 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="img/logo/full_3.png"
+              src="../../img/logo/full_3.png"
               width="50"
               height="50"
               class="rounded"
@@ -82,7 +82,12 @@
       My Shopping Cart
     </div>
     <div class="back_to btn btn-light border ml-5">
-      <img src="img/icons/back.png" width="16" height="16" onclick="goBack()" />
+      <img
+        src="../../img/icons/back.png"
+        width="16"
+        height="16"
+        onclick="goBack()"
+      />
     </div>
     <div class="table-responsive container pt-5">
       <table class="table table-striped bg-white border-top-0">
@@ -155,7 +160,7 @@
               <div class="col-lg-6 col-md-5 col-sm-12 d-flex flex-column">
                 <div class="h1">
                   <img
-                    src="img/logo/full_1.png"
+                    src="../../img/logo/full_1.png"
                     width="50"
                     height="50"
                     class="rounded"
@@ -278,8 +283,8 @@
     <!-- END FOOTER -->
 
     <!-- JS FILES -->
-    <script src="lib/jquery-3.5.1.min.js"></script>
-    <script src="lib/bootstrap-4.3.1.min.js"></script>
+    <script src="../../lib/jquery-3.5.1.min.js"></script>
+    <script src="../../lib/bootstrap-4.3.1.min.js"></script>
 
     <script>
       function goBack() {
@@ -288,7 +293,7 @@
     </script>
 
     <!-- Email lib -->
-    <script src="lib/smtp.js"></script>
+    <script src="../../lib/smtp.js"></script>
 
     <script src="js/shopping_cart.js"></script>
     <!-- scroll effect with navbar -->
